@@ -36,7 +36,7 @@ public class SortedRefCountedSet<K>
         Integer value = refSet.get(key);
         if (value == null)
         {
-            refSet.put(key, new Integer(1));
+            refSet.put(key, Integer.valueOf(1));
             return;
         }
 
